--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,8 +1,27 @@
 .nav--container {
-  background-color: #778da9;
   filter: drop-shadow(#778da9 0px 10px 10px);
+  display: flex;
+  align-items: center;
 }
 
 .white-border {
   border: 5px solid white;
+}
+
+.dark {
+  /* background: #1b263b; */
+  background: #001529;
+  /* color: #e0e1dd; */
+  color: #ffffff;
+}
+
+.light {
+  /* background: #e0e1dd; */
+  background: #ffffff;
+  /* color: #1b263b; */
+  color: #001529;
+}
+
+.mode {
+  margin: 1rem;
 }
