--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
+html,
 body {
-  background: #1b263b;
   margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
 }
 
 .fa-linkedin {
