--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -25,3 +25,10 @@
 .mode {
   margin: 1rem;
 }
+
+.darkmode-wrapper {
+  display: flex;
+  align-items: center;
+  max-height: 40px;
+  margin-right: 1rem;
+}
